#2 Allow users to type in their email and password
In order allow users to login to the application
- Add the email, password fields and login button to the Login page
- Change the routing in the home page to point to the Login page

--- a/fmt-ui/src/app/login/login.component.html
+++ b/fmt-ui/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-
+<div class="card customer-input">
+  <div class="col-md-6 section">
+    <div class='group-input'>
+      <div class='input-title'>Email:</div>
+      <input class='input-text-box' required type='text'/>
+    </div>
+    <div class="group-input">
+      <div class='input-title'>Password:</div>
+      <input class='input-text-box' required type='password'/>
+    </div>
+    <div class="group-input">
+      <button mat-raised-button color="primary" (click)="login()">Login</button>
+    </div>
+  </div>
+</div>
