--- a/fmt-ui/src/app/home/home.component.html
+++ b/fmt-ui/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 </div>
 <div style="text-align: center">
   <ul>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Login</a></h2>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">Create New User</a></h2>
+    <h2><a routerLink="/login">Login</a></h2>
+    <h2><a routerLink="/create_user">Create New User</a></h2>
   </ul>
 </div>
