#2 Validate user's input and encrypt the password on client side
In order allow users to login to the application
- Add the code to generate the hash of a password before sending it to the server
- Add validation to the LogIn page to ensure the data entered by the user is correct
- Modify the CSS to better display the error messages

--- a/fmt-ui/src/app/login/login.component.html
+++ b/fmt-ui/src/app/login/login.component.html
@@ -1,12 +1,16 @@
 <div class="card customer-input">
   <div class="col-md-6 section">
+    <div *ngIf="invalidInput()" class="error-message">
+      {{ errorMessage }}
+    </div>
     <div class='group-input'>
       <div class='input-title'>Email:</div>
-      <input class='input-text-box' required type='text'/>
+      <input class='input-text-box' required type='email' email="true"
+             [(ngModel)]='userEmail'/>
     </div>
     <div class="group-input">
       <div class='input-title'>Password:</div>
-      <input class='input-text-box' required type='password'/>
+      <input class='input-text-box' required type='password' [(ngModel)]='userPassword'/>
     </div>
     <div class="group-input">
       <button mat-raised-button color="primary" (click)="login()">Login</button>
