--- a/fmt-ui/src/styles.css
+++ b/fmt-ui/src/styles.css
@@ -36,3 +36,19 @@ div.customer-input {
   width: 320px;
   font-size: x-small;
 }
+
+.error-message {
+  font-family: "Bangla MN", serif;
+  text-align: left;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  font-size: small;
+  background: red;
+  color: white;
+  padding-top: 5px;
+  padding-left: 10px;
+  vertical-align: center;
+  margin-top: 5px;
+  margin-left: 10px;
+}
