--- a/fmt-ui/src/app/login/login.component.html
+++ b/fmt-ui/src/app/login/login.component.html
@@ -10,7 +10,8 @@
     </div>
     <div class="group-input">
       <div class='input-title'>Password:</div>
-      <input class='input-text-box' required type='password' [(ngModel)]='userPassword'/>
+      <input class='input-text-box' required type='password'
+             [(ngModel)]='userPassword'/>
     </div>
     <div class="group-input">
       <button mat-raised-button color="primary" (click)="login()">Login</button>
