#6 Create a new component for user creations
In order to allow users to create their own accounts:
1. Create all the needed files for the create-user component
2. Add a routing to route new users to the create-user component

--- a/fmt-ui/src/app/components/home/home.component.html
+++ b/fmt-ui/src/app/components/home/home.component.html
@@ -6,6 +6,6 @@
 <div style="text-align: center">
   <ul>
     <h2><a routerLink="/login">Login</a></h2>
-    <h2><a routerLink="/create_user">Create New User</a></h2>
+    <h2><a routerLink="/createUser">Create New User</a></h2>
   </ul>
 </div>
