--- a/fmt-ui/src/app/components/create-user/create-user.component.html
+++ b/fmt-ui/src/app/components/create-user/create-user.component.html
@@ -1,5 +1,8 @@
 <div class="card customer-input">
   <div class="col-md-6 section">
+    <div *ngIf="invalidInput()" class="error-message">
+      {{ errorMessage }}
+    </div>
     <div class='group-input'>
       <div class='input-title'>Email:</div>
       <input class='input-text-box' required type='email' email="true"
