#13 Create the Session instance from the input filled by the user
In order to enable users to start new feedback sessions
1. Add an event to catch the changes on dates (Start and End)
2. Add a Session object
3. On clicking the 'Save' button, create an instance of the Session object

--- a/fmt-ui/src/app/components/feedback/start-session.component.html
+++ b/fmt-ui/src/app/components/feedback/start-session.component.html
@@ -1,12 +1,13 @@
 <div class="card customer-input">
-  <div>
+  <div class="col-md-6 section">
     <div class='group-input'>
       <div class='input-title'>Name:</div>
-      <input class='input-text-box' required [(ngModel)]='sessionName'/>
+      <input class='input-text-box' [(ngModel)]='sessionName'/>
     </div>
     <div>
-      <mat-form-field class="example-full-width">
-        <input matInput [matDatepicker]="startDatepicker" placeholder="Start Date">
+      <mat-form-field>
+        <input matInput [min]="minStartDate" [matDatepicker]="startDatepicker" required placeholder="Start Date"
+               (dateChange)="changeStartDate($event)">
         <mat-datepicker-toggle matSuffix [for]="startDatepicker">
           <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
         </mat-datepicker-toggle>
@@ -14,8 +15,9 @@
       </mat-form-field>
     </div>
     <div>
-      <mat-form-field class="example-full-width">
-        <input matInput [matDatepicker]="endDatepicker" placeholder="End Date">
+      <mat-form-field>
+        <input matInput [min]="minEndDate" [matDatepicker]="endDatepicker" required placeholder="End Date"
+               (dateChange)="changeEndDate($event)">
         <mat-datepicker-toggle matSuffix [for]="endDatepicker">
           <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
         </mat-datepicker-toggle>
